refs/ps/testcases/A3/Testcases/Error/tc14.c
void main()
{
    float a,b;
    bool c;
    int d;
    c=a*b>=a || !b<a;
    d=c? true:false;
}